before typeorm setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
-  "extends": "@tsconfig/recommended/tsconfig.json",
-
   "compilerOptions": {
     "target": "es6",
+    "module": "commonjs",
     "outDir": "build",
     "sourceMap": true
   },
-  
+  "files": [
+    "./node_modules/@types/mocha/index.d.ts",
+    "./node_modules/@types/node/index.d.ts"
+  ],
   "include": [
     "src/**/*.ts"
   ],
-
   "exclude": [
     "node_modules"
   ]
