--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "build": "rimraf ./build && tsc",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .ts",
     "start:dev": "nodemon",
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js"
@@ -21,10 +22,19 @@
   },
   "homepage": "https://github.com/Mcfishflaps/MemeServer#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/express": "^4.17.8",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.11.0",
+    "morgan": "^1.10.0",
+    "postgres": "^1.0.2",
+    "typeorm": "^0.2.26"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
+    "eslint": "^7.9.0",
+    "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
     "ts-node": "^9.0.0"
