--- a/package.json
+++ b/package.json
@@ -1,42 +1,47 @@
 {
-  "name": "memeserver",
-  "version": "1.0.0",
-  "description": "MemeServer Rewrite",
-  "main": "index.js",
-  "build": "rimraf ./build && tsc",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext .ts",
-    "start:dev": "nodemon",
-    "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Mcfishflaps/MemeServer.git"
-  },
-  "author": "Mads Wolf Jespersen",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Mcfishflaps/MemeServer/issues"
-  },
-  "homepage": "https://github.com/Mcfishflaps/MemeServer#readme",
-  "dependencies": {
-    "@types/express": "^4.17.8",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.11.0",
-    "morgan": "^1.10.0",
-    "postgres": "^1.0.2",
-    "typeorm": "^0.2.26"
-  },
-  "devDependencies": {
-    "@tsconfig/recommended": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
-    "eslint": "^7.9.0",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.4",
-    "rimraf": "^3.0.2",
-    "ts-node": "^9.0.0"
-  }
+   "name": "memeserver",
+   "version": "1.0.0",
+   "description": "MemeServer Rewrite",
+   "main": "index.js",
+   "build": "rimraf ./build && tsc",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "lint": "eslint . --ext .ts",
+      "start:dev": "nodemon",
+      "build": "rimraf ./build && tsc",
+      "start": "ts-node src/index.ts"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/Mcfishflaps/MemeServer.git"
+   },
+   "author": "Mads Wolf Jespersen",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/Mcfishflaps/MemeServer/issues"
+   },
+   "homepage": "https://github.com/Mcfishflaps/MemeServer#readme",
+   "dependencies": {
+      "@types/express": "^4.17.8",
+      "@types/mocha": "^8.0.3",
+      "@types/node": "^14.11.0",
+      "morgan": "^1.10.0",
+      "postgres": "^1.0.2",
+      "typeorm": "0.2.26",
+      "reflect-metadata": "^0.1.10",
+      "express": "^4.15.4",
+      "body-parser": "^1.18.1"
+   },
+   "devDependencies": {
+      "@tsconfig/recommended": "^1.0.1",
+      "@typescript-eslint/eslint-plugin": "^4.1.1",
+      "@typescript-eslint/parser": "^4.1.1",
+      "eslint": "^7.9.0",
+      "express": "^4.17.1",
+      "nodemon": "^2.0.4",
+      "rimraf": "^3.0.2",
+      "ts-node": "3.3.0",
+      "@types/node": "^8.0.29",
+      "typescript": "3.3.3333"
+   }
 }
