finished react tutorial and began work on the frontend

--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -1,10 +1,10 @@
 {
-   "type": "psql",
+   "type": "postgres",
    "host":"localhost",
    "port":"5432",
    "username": "postgres",
    "password":"root",
-   "database": "test",
+   "database": "memes",
    "synchronize": true,
    "logging": false,
    "entities": [
