--- a/server/package.json
+++ b/server/package.json
@@ -25,12 +25,13 @@
       "@types/express": "^4.17.8",
       "@types/mocha": "^8.0.3",
       "@types/node": "^14.11.0",
-      "morgan": "^1.10.0",
-      "postgres": "^1.0.2",
-      "typeorm": "0.2.26",
-      "reflect-metadata": "^0.1.10",
+      "body-parser": "^1.18.1",
       "express": "^4.15.4",
-      "body-parser": "^1.18.1"
+      "morgan": "^1.10.0",
+      "pg": "^8.3.3",
+      "postgres": "^1.0.2",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "0.2.26"
    },
    "devDependencies": {
       "@tsconfig/recommended": "^1.0.1",
