--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,7 @@
       "target": "es5",
       "module": "commonjs",
       "moduleResolution": "node",
-      "outDir": "./build",
+      "outDir": "./out",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true
