--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,11 @@
       "@types/express": "^4.17.8",
       "@types/mocha": "^8.0.3",
       "@types/node": "^14.11.0",
-      "body-parser": "^1.18.1",
+      "body-parser": "^1.19.0",
+      "cors": "^2.8.5",
       "express": "^4.15.4",
       "morgan": "^1.10.0",
+      "multer": "^1.4.2",
       "pg": "^8.3.3",
       "postgres": "^1.0.2",
       "reflect-metadata": "^0.1.10",
@@ -35,6 +37,7 @@
    },
    "devDependencies": {
       "@tsconfig/recommended": "^1.0.1",
+      "@types/node": "^8.0.29",
       "@typescript-eslint/eslint-plugin": "^4.1.1",
       "@typescript-eslint/parser": "^4.1.1",
       "eslint": "^7.9.0",
@@ -42,7 +45,6 @@
       "nodemon": "^2.0.4",
       "rimraf": "^3.0.2",
       "ts-node": "3.3.0",
-      "@types/node": "^8.0.29",
       "typescript": "3.3.3333"
    }
 }
