--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,8 @@
       "cors": "^2.8.5",
       "express": "^4.15.4",
       "express-fileupload": "^1.2.0",
+      "express-graphql": "^0.11.0",
+      "graphql": "^15.3.0",
       "morgan": "^1.10.0",
       "multer": "^1.4.2",
       "pg": "^8.3.3",
