added user feedback for when a button is too large

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-tooltip": "^4.2.10",
     "remove": "^0.1.5",
     "rsuite": "^4.8.2",
     "typescript": "~3.7.2"
