--- a/server/package.json
+++ b/server/package.json
@@ -24,14 +24,27 @@
    "dependencies": {
       "@types/express": "^4.17.8",
       "@types/express-fileupload": "^1.1.5",
+      "@types/imagemin": "^7.0.0",
+      "@types/imagemin-gifsicle": "^7.0.0",
+      "@types/imagemin-jpegtran": "^5.0.0",
+      "@types/imagemin-mozjpeg": "^8.0.0",
       "@types/mocha": "^8.0.3",
       "@types/node": "^14.11.0",
       "body-parser": "^1.19.0",
+      "compress-images": "^1.9.5",
       "cors": "^2.8.5",
       "express": "^4.15.4",
       "express-fileupload": "^1.2.0",
       "express-graphql": "^0.11.0",
       "graphql": "^15.3.0",
+      "imagemin": "^7.0.1",
+      "imagemin-giflossy": "^5.1.10",
+      "imagemin-gifsicle": "^7.0.0",
+      "imagemin-jpegtran": "^7.0.0",
+      "imagemin-mozjpeg": "^9.0.0",
+      "imagemin-optipng": "^8.0.0",
+      "imagemin-pngquant": "^9.0.1",
+      "imagemin-svgo": "^8.0.0",
       "morgan": "^1.10.0",
       "multer": "^1.4.2",
       "pg": "^8.3.3",
