--- a/server/package.json
+++ b/server/package.json
@@ -32,10 +32,14 @@
       "express": "^4.15.4",
       "express-fileupload": "^1.2.0",
       "express-graphql": "^0.11.0",
+      "file-type": "^15.0.1",
+      "gifsicle": "^5.1.0",
       "graphql": "^15.3.0",
+      "mime-types": "^2.1.27",
       "morgan": "^1.10.0",
       "multer": "^1.4.2",
       "pg": "^8.3.3",
+      "pngquant-bin": "^6.0.0",
       "postgres": "^1.0.2",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.26"
