--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
       "body-parser": "^1.19.0",
       "compress-images": "^1.9.5",
       "cors": "^2.8.5",
+      "dotenv": "^8.2.0",
       "express": "^4.15.4",
       "express-fileupload": "^1.2.0",
       "express-graphql": "^0.11.0",
