--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "react-tooltip": "^4.2.10",
     "remove": "^0.1.5",
     "rsuite": "^4.8.2",
+    "svg-inline-loader": "^0.8.2",
+    "svg-sprite-loader": "^5.0.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
