--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-test-renderer": "^16.9.3",
     "@types/testing-library__react": "^10.2.0",
     "axios": "^0.20.0",
+    "gif-frames": "^1.0.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
