--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
       "express-fileupload": "^1.2.0",
       "express-graphql": "^0.11.0",
       "file-type": "^15.0.1",
+      "giflossy": "^3.0.41",
       "gifsicle": "^5.1.0",
       "graphql": "^15.3.0",
       "mime-types": "^2.1.27",
