--- a/server/package.json
+++ b/server/package.json
@@ -22,11 +22,18 @@
    },
    "homepage": "https://github.com/Mcfishflaps/MemeServer#readme",
    "dependencies": {
+      "@types/bcryptjs": "^2.4.2",
+      "@types/body-parser": "^1.19.0",
+      "@types/cors": "^2.8.8",
       "@types/express": "^4.17.8",
       "@types/express-fileupload": "^1.1.5",
+      "@types/helmet": "^0.0.48",
+      "@types/jsonwebtoken": "^8.5.0",
       "@types/mocha": "^8.0.3",
       "@types/node": "^14.11.0",
+      "bcryptjs": "^2.4.3",
       "body-parser": "^1.19.0",
+      "class-validator": "^0.12.2",
       "compress-images": "^1.9.5",
       "cors": "^2.8.5",
       "dotenv": "^8.2.0",
@@ -37,6 +44,8 @@
       "giflossy": "^3.0.41",
       "gifsicle": "^5.1.0",
       "graphql": "^15.3.0",
+      "helmet": "^4.1.1",
+      "jsonwebtoken": "^8.5.1",
       "mime-types": "^2.1.27",
       "morgan": "^1.10.0",
       "multer": "^1.4.2",
@@ -44,6 +53,7 @@
       "pngquant-bin": "^6.0.0",
       "postgres": "^1.0.2",
       "reflect-metadata": "^0.1.10",
+      "ts-node-dev": "^1.0.0-pre.63",
       "typeorm": "0.2.26"
    },
    "devDependencies": {
