--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
       "lint": "eslint . --ext .ts",
       "start:dev": "nodemon",
       "build": "rimraf ./out && tsc",
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run"
    },
    "repository": {
       "type": "git",
@@ -31,6 +32,7 @@
       "@types/jsonwebtoken": "^8.5.0",
       "@types/mocha": "^8.0.3",
       "@types/node": "^14.11.0",
+      "@types/nodemailer": "^6.4.0",
       "bcryptjs": "^2.4.3",
       "body-parser": "^1.19.0",
       "class-validator": "^0.12.2",
@@ -49,6 +51,7 @@
       "mime-types": "^2.1.27",
       "morgan": "^1.10.0",
       "multer": "^1.4.2",
+      "nodemailer": "^6.4.14",
       "pg": "^8.3.3",
       "pngquant-bin": "^6.0.0",
       "postgres": "^1.0.2",
