--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,17 @@
     "@types/jest": "^26.0.14",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.49",
+    "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.3",
     "@types/testing-library__react": "^10.2.0",
     "axios": "^0.20.0",
     "gif-frames": "^1.0.1",
+    "graphicsmagick": "^0.0.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
