--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,25 +6,26 @@
     "@babel/preset-typescript": "^7.10.4",
     "@csstools/normalize.css": "^11.0.1",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.14",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.49",
+    "@types/react": "18",
     "@types/react-cookies": "^0.1.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react-dom": "18",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.3",
     "@types/testing-library__react": "^10.2.0",
     "axios": "^0.20.0",
     "gif-frames": "^1.0.1",
     "graphicsmagick": "^0.0.1",
-    "react": "^16.13.1",
+    "postcss": "8.1.0",
+    "react": "18",
     "react-app-polyfill": "^1.0.6",
     "react-cookie": "^4.0.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "18",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "5.0.1",
     "react-tooltip": "^4.2.10",
     "remove": "^0.1.5",
     "rsuite": "^4.8.2",
@@ -71,5 +72,8 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0",
     "tslint-react": "^5.0.0"
+  },
+  "resolutions": {
+    "sanitize.css": "12.0.1"
   }
 }
